--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha" 
   },
   "keywords": [],
   "author": "",
@@ -13,5 +13,8 @@
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.1"
+  },
+  "devDependencies": {
+    "mocha": "^10.3.0" 
   }
 }
